fixed double scroll bug

--- a/resources/sass/footer.scss
+++ b/resources/sass/footer.scss
@@ -43,7 +43,7 @@
                     gap: 3vw;
                     a {
                         width: 5vw;
-                        height: 5vw;
+                        min-width: 50px;
                         img {
                             width: 100%;
                         }
@@ -72,7 +72,7 @@
             img {
                 width: 100%;
                 width: 4vw;
-                height: 4vw;
+                min-width: 40px;
                 background-color: white;
                 padding: 2px;
                 border-radius: 5px;
